Fix small spec and entities mistakes
