# frontend_angular/src/app/api/api/membership.service.ts
@@ -60,16 +60,21 @@ export class MembershipService {
      * Add a membership record for a member
      * 
      * @param body The membership to create
+     * @param memberId The unique identifier of the member
      * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
      * @param reportProgress flag to report request and response progress.
      */
-    public memberMemberIdMembershipPost(body: AbstractMembership, observe?: 'body', reportProgress?: boolean): Observable<any>;
-    public memberMemberIdMembershipPost(body: AbstractMembership, observe?: 'response', reportProgress?: boolean): Observable<HttpResponse<any>>;
-    public memberMemberIdMembershipPost(body: AbstractMembership, observe?: 'events', reportProgress?: boolean): Observable<HttpEvent<any>>;
-    public memberMemberIdMembershipPost(body: AbstractMembership, observe: any = 'body', reportProgress: boolean = false ): Observable<any> {
+    public memberMemberIdMembershipPost(body: AbstractMembership, memberId: number, observe?: 'body', reportProgress?: boolean): Observable<any>;
+    public memberMemberIdMembershipPost(body: AbstractMembership, memberId: number, observe?: 'response', reportProgress?: boolean): Observable<HttpResponse<any>>;
+    public memberMemberIdMembershipPost(body: AbstractMembership, memberId: number, observe?: 'events', reportProgress?: boolean): Observable<HttpEvent<any>>;
+    public memberMemberIdMembershipPost(body: AbstractMembership, memberId: number, observe: any = 'body', reportProgress: boolean = false ): Observable<any> {
 
         if (body === null || body === undefined) {
             throw new Error('Required parameter body was null or undefined when calling memberMemberIdMembershipPost.');
+        }
+
+        if (memberId === null || memberId === undefined) {
+            throw new Error('Required parameter memberId was null or undefined when calling memberMemberIdMembershipPost.');
         }
 
         let headers = this.defaultHeaders;
